k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: chatapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend #same in labels app
  template:
    metadata:
      name: backend-pod
      namespace: chatapp
      labels:
        app: backend #same in matchlabels app
    spec:
      containers:
        - name: backend-chat-app
          image: shubhankar24/chat-app-backend:latest
          ports:
            - containerPort: 5001
