k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: fullstack-chatapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend #same in labels app
  template:
    metadata:
      name: frontend-pod
      namespace: fullstack-chatapp
      labels:
        app: frontend #same in matchlabels app
    spec:
      containers:
        - name: frontend-chat-app
          image: shubhankar24/chat-app-frontend:latest
          ports:
            - containerPort: 80
