k8s/mongodb-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  namespace: fullstack-chatapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb #same in labels app
  template:
    metadata:
      name: mongodb-pod
      namespace: fullstack-chatapp
      labels:
        app: mongodb #same in matchlabels app
    spec:
      containers:
        - name: mongodb-chat-app
          image: mongo:latest
          ports:
            - containerPort: 27017
      volumes:
        - name: mongodb-data
          persistentVolumeClaim:
            claimName: mongodb-pvc
