k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: fullstack-chatapp
spec:
  selector:
    app: backend #same in matchlabels app in backend-deployment
  ports:
  - port: 5001
    targetPort: 5001
